<!--
  ~     Copyright 2016 Makoto Consulting Group, Inc.
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  ~
  -->

<resources>
    <string name="about">About HoursDroid</string>
    <string name="action_settings">Settings</string>
    <string name="active">Active?</string>
    <string name="app_name">HoursDroid</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="enter_job_description">Enter Job Description</string>
    <string name="enter_job_name">Enter Job Name</string>
    <string name="job_detail">Job Detail</string>
    <string name="job_list_title">Jobs</string>
    <string name="job_name">Job Name</string>
    <string name="menu_item_title_job_delete">Delete Job</string>
    <string name="menu_item_title_job_edit">Edit Job</string>
    <string name="menu_item_title_job_new">New Job</string>
    <string name="rate_application_title">Rate HoursDroid</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="menu_item_title_hours_new">New Hours</string>
    <string name="menu_item_title_hours_delete">Delete Hours</string>
    <string name="hours_begin_date">Begin Date</string>
    <string name="hours_begin_time">Begin Time</string>
    <string name="hours_job_name">Job</string>
    <string name="hours_project_name">Project</string>
    <string name="hours_now">Now</string>
    <string name="hours_end_date">End Date</string>
    <string name="hours_end_time">End Time</string>
    <string name="hours_today">Today</string>
    <string name="hours_break">Break</string>
    <string name="hours_comments">Comments</string>
    <string name="hours_description">Description</string>
    <string name="hours_total">Total</string>
    <string name="minutes">Minutes</string>
    <string name="hours_begin">Begin</string>
    <string name="date">Date</string>
    <string name="begin">Begin</string>
    <string name="time">Time</string>
    <string name="end">End</string>
    <string name="total">Total</string>
    <string name="hours_list">Hours List</string>
    <string name="hours_detail">Hours Detail</string>
    <string name="date_picker_title">Select Date</string>
    <string name="touch_to_set">(Touch to Set)</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="hours_begin_date_time">Begin Date/Time</string>
    <string name="hours_end_date_time">End Date/Time</string>
    <string name="edit">Edit</string>
    <string name="start_hours">Start Hours</string>
    <string name="stop_hours">Stop Hours</string>
    <string name="hours_records_for_job">Hours Records for Job</string>
    <string name="start_work">Start Work</string>
    <string name="stop_work">Stop Work</string>
    <string name="project_name">Project Name</string>
    <string name="jobs">Jobs</string>
    <string name="projects">Projects</string>
    <string name="menu_item_title_project_edit">Edit Project</string>
    <string name="menu_item_title_project_delete">Delete Project</string>
    <string name="project_list">Project List</string>
    <string name="project_detail">Project Details</string>
    <string name="enter_project_name">Enter Project Name</string>
    <string name="enter_project_description">Enter Project Description</string>
    <string name="done">Done</string>
    <string name="please_choose">Please Choose</string>
    <string name="date_or_time">Please Choose:</string>
    <string name="menu_item_title_hours_filter">Filter</string>
    <string name="menu_item_title_hours_reporting_summary">Reporting Summary</string>
    <string name="menu_item_title_job_reporting_summary">Reporting Summary</string>
    <string name="reporting_summary">Reporting Summary</string>
    <string name="to">to</string>
    <string name="filter_settings">Filter Settings</string>
    <string name="menu_item_title_project_new">New Project</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="makoto_droid_icon">Makoto Consulting Group Inc</string>
    <string name="rate_application_ramble">If you enjoy this app, please take a moment and rate it!</string>
    <string name="rate_application_rate_button">Click to rate</string>
    <string name="rate_application_remind_me_later">Remind me later</string>
    <string name="rate_application_do_not_ask_again">Do not ask again</string>
    <string name="market_uri_prefix">market://details?id=</string>
    <string name="pref_title_showInactiveJobs">Show Inactive Jobs?</string>
    <string name="pref_title_showNotifications">Show Toast Notifications?</string>
    <string name="application_options">Application Options</string>
    <string name="hours_billed">Billed?</string>
    <string name="pref_title_showBilledHoursRecords">Show Billed Hours?</string>
    <string name="billing_summary">Billing Summary</string>
    <string name="pref_cat_title_rounding">Round to Nearest:</string>
    <string name="rounding_none">None</string>
    <string name="menu_item_title_job_billing_summary">Billing Summary</string>

</resources>