<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.makotogo.mobile.framework.AbstractSingleFragmentActivity">

    <item
        android:id="@+id/menu_item_job_new"
        android:icon="@drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/menu_item_title_job_new"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_item_job_reporting_summary"
        android:icon="@drawable/ic_menu_reporting_summary"
        android:orderInCategory="200"
        android:title="@string/menu_item_title_job_reporting_summary"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_item_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="300"
        android:title="@string/settings"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_item_about"
        android:orderInCategory="400"
        android:title="@string/about"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_item_rate_app"
        android:orderInCategory="500"
        android:title="@string/rate_application_title"
        app:showAsAction="ifRoom|withText"/>

</menu>
