<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:contentDescription="Displays jobs that are marked inactive if checked"
        android:defaultValue="true"
        android:key="PREFS_KEY_SHOW_INACTIVE_JOBS"
        android:title="@string/pref_title_showInactiveJobs"
        />

    <CheckBoxPreference
        android:contentDescription="Shows Android Toast notification if checked"
        android:defaultValue="true"
        android:key="PREFS_KEY_SHOW_NOTIFICATIONS"
        android:title="@string/pref_title_showNotifications"
        />

    <CheckBoxPreference
        android:contentDescription="Shows billed Hours records if checked"
        android:defaultValue="false"
        android:key="PREFS_KEY_SHOW_BILLED_HOURS_RECORDS"
        android:title="@string/pref_title_showBilledHoursRecords"
        />

    <ListPreference
        android:defaultValue="No Rounding"
        android:entries="@array/RoundingChoices"
        android:entryValues="@array/RoundingChoiceValues"
        android:key="PREFS_KEY_ROUNDING"
        android:title="@string/pref_cat_title_rounding"
        />

</PreferenceScreen>