<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/standard_background"
              android:orientation="vertical"
              android:padding="5dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_name"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <EditText
            android:id="@+id/edittext_project_detail_project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:hint="@string/enter_project_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <EditText
            android:id="@+id/edittext_project_detail_project_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_border"
            android:hint="@string/enter_project_description"
            android:inputType="textMultiLine"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">


        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:gravity="center">

            <Button
                android:id="@+id/button_project_detail_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/standard_background"
                android:text="@string/save"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>