<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="#FFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="5sp"
        android:paddingLeft="5sp"
        android:paddingEnd="2sp"
        android:paddingRight="2sp"
        android:background="?android:attr/activatedBackgroundIndicator"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/begin"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/hours_list_row_begin_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/hours_list_row_begin_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/end"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/hours_list_row_end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/hours_list_row_end_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hours_break"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/hours_list_row_break"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/hours_list_row_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                />

        </LinearLayout>

    </LinearLayout>

    <view
        class="android.view.View"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"/>

    <view
        class="android.view.View"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333"/>

</LinearLayout>