<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright 2016 Makoto Consulting Group, Inc.
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/standard_background"
              android:orientation="vertical"
              android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hours_project_name"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <Spinner
            android:id="@+id/spinner_hours_list_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/hours_records_for_job"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <!--
            <ImageView
                android:id="@+id/imageview_hours_list_filter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_border"
                android:padding="1dp"
                android:src="@drawable/ic_menu_filter"/>
                -->

        </LinearLayout>

        <ListView
            android:id="@+id/hours_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:gravity="center">

            <Button
                android:id="@+id/button_hours_start_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/standard_background"
                android:text="@string/start_work"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>